# IGTC-Research

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/: clip_pretrainer.ipynb  image_similarity_pretrainer.ipynb  similarity_check.ipynb
tests/: test_imageguidedtextcorrection.py
