[tool.poetry]
name = "imageguidedtextcorrection"
version = "0.1.0"
description = "Imageided text correction using contrastive pretraining"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "2.4.0"
matplotlib = "^3.4.3"
jupyterlab = "^3.1.12"
tensorflow-hub = "^0.12.0"
tensorflow-addons = "^0.14.0"
pandas = "^1.3.3"
tensorflow-text = "2.4.1"
comet-ml = "^3.16.0"
ipywidgets = "^7.6.5"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
